@@ -1,0 +1,2 @@
+__path__ = __import__('pkgutil').extend_path(__path__, __name__)        
+
