@@ -1,1 +1,3 @@
-from mesh_model import Mesh, MeshFile, UniformRefinement, MeshGroup
+__path__ = __import__('pkgutil').extend_path(__path__, __name__)
+
+
