@@ -1,4 +1,8 @@
 	Change Log
+	* 08/01/2017
+
+	** Geometry building interface is added for testing an idea...
+	
 	* 07/24/2017
 
 	** Initial value setting for TH3Ds was added.
